# parallel-knapsack

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp  test_instances.txt
algorithm/: algorithm.h  algorithm_impl.h  algorithm_omp.h  algorithm_tbb.h
